fix: dockerfile